--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.12.0",
+    "argon2": "^0.30.3",
+    "dotenv": "^16.0.3",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.3.12"
