--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: example
+    ports:
+      - 5432:5432
 
   adminer:
     image: adminer
