--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,17 @@
   "dependencies": {
     "apollo-server": "^3.12.0",
     "argon2": "^0.30.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
