--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
