--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 services:
-  backend:
-    build: ./backend
-    ports:
-      - 5000:5000
-    volumes:
-      - ./backend/src:/app/src
+  # backend:
+  #   build: ./backend
+  #   ports:
+  #     - 5000:5000
+  #   volumes:
+  #     - ./backend/src:/app/src
 
-  frontend:
-    build: ./frontend
-    ports:
-      - 3000:3000
-    volumes:
-      - ./frontend/src:/app/src
+  # frontend:
+  #   build: ./frontend
+  #   ports:
+  #     - 3000:3000
+  #   volumes:
+  #     - ./frontend/src:/app/src
 
   postgres:
     image: postgres
